# stm32f103c8t6-cmake-template

./: CMakeLists.txt  README.md  build.sh  run.sh
Core/Inc/: main.h
Core/Src/: main.c
